--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,17 +24,20 @@ repos:
     hooks:
     -   id: autopep8
 -   repo: https://github.com/asottile/reorder_python_imports
-    rev: v1.9.0
+    rev: v2.0.0
     hooks:
     -   id: reorder-python-imports
+        args: [--py3-plus]
 -   repo: https://github.com/asottile/add-trailing-comma
-    rev: v1.5.0
+    rev: v2.0.0
     hooks:
     -   id: add-trailing-comma
+        args: [--py36-plus]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.1.0
     hooks:
     -   id: pyupgrade
+        args: [--py36-plus]
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.761
     hooks:
