--- a/setup.cfg
+++ b/setup.cfg
@@ -11,11 +11,8 @@ license = MIT
 license_file = LICENSE
 classifiers =
     License :: OSI Approved :: MIT License
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -26,8 +23,7 @@ classifiers =
 py_modules = covdefaults
 install_requires =
     coverage>=4.5
-    typing>=3.6 ;python_version=="2.7"
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
+python_requires = >=3.6.1
 
 [bdist_wheel]
 universal = True
